--- a/src/sass/utilities/_index.scss
+++ b/src/sass/utilities/_index.scss
@@ -3,3 +3,6 @@
 @forward "spacing";
 @forward "container";
 @forward "font-weights";
+@forward "./uppercase";
+@forward "./text-center";
+@forward "./font-families";
