--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -9,7 +9,7 @@ $ff-accent: $ff-sans;
 $font-sizes: (
   900: 3.75rem,
   800: 3rem,
-  600: 1.5rem,
+  600: clamp(1.5rem, 3vw + 1.5rem, 2.5rem),
   500: 1.3125rem,
   400: 1.125rem,
 );
