--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -23,7 +23,7 @@ picture {
 body {
   font-family: "Tinos", serif;
   font-weight: 400;
-  background-color: rgba(244, 225, 225, 0.4705882353);
+  background-color: rgb(255, 255, 255);
   color: rgba(0, 0, 0, 0.8941176471);
 }
 
@@ -63,7 +63,7 @@ body {
     margin-inline-end: 2.25rem;
   }
   .header__title {
-    background-color: rgba(233, 23, 23, 0.783);
+    background-color: #4f6308;
     width: 100%;
     grid-area: title;
     font-size: 3rem;
@@ -99,7 +99,7 @@ body {
 .hero__note {
   font-size: x-small;
   font-style: italic;
-  color: rgba(233, 23, 23, 0.783);
+  color: #4f6308;
   font-weight: 700;
 }
 .hero__paragraph {
@@ -129,7 +129,7 @@ body {
   }
   .hero__title {
     width: 30ch;
-    color: rgba(233, 23, 23, 0.783);
+    color: rgba(0, 0, 0, 0.8941176471);
     font-weight: 700;
   }
   .hero__note {
@@ -145,7 +145,7 @@ body {
 }
 @media screen and (min-width: 65em) {
   .hero {
-    transform: translateY(-1.5rem);
+    transform: translateY(-0.75rem);
   }
   .hero__wrapper {
     --gap: 8.4375rem;
@@ -159,9 +159,66 @@ body {
   }
   .hero__title {
     letter-spacing: 0.09em;
+    width: 15ch;
   }
   .hero__paragraph {
     width: 57ch;
+  }
+}
+
+.steps__cards > * {
+  border-radius: 1rem;
+}
+.steps__cards.grid-layout {
+  display: grid;
+  --gap: 1.5rem;
+  --col1: 1fr;
+  grid-template-columns: var(--gap) var(--col1) var(--gap);
+  justify-content: center;
+  grid-template-areas: ". card1 ." ". card2 ." ". card3 .";
+}
+.steps__check {
+  width: clamp(2.25rem, 5vw + 1.5rem, 6.25rem);
+}
+.steps__1 {
+  grid-area: card1;
+}
+.steps__2 {
+  grid-area: card2;
+}
+.steps__3 {
+  grid-area: card3;
+}
+:is(.steps__1, .steps__2, .steps__3) {
+  box-shadow: 0.1em 0.2em 0.3em #4f6308;
+}
+@media screen and (min-width: 45em) {
+  .steps__cards.grid-layout {
+    display: grid;
+    --gap: 3.375rem;
+    row-gap: 1rem;
+    --col1: 1fr;
+    --col2: 1fr;
+    grid-template-columns: var(--gap) var(--col1) var(--col2) var(--gap);
+    justify-content: center;
+    grid-template-areas: ". card1 card2 ." ". card3 card3 .";
+  }
+  .steps__1 {
+    grid-column: 2/3;
+  }
+  .steps__2 {
+    grid-column: 3/4;
+    margin-inline-start: 1rem;
+  }
+}
+@media screen and (min-width: 65em) {
+  .steps__cards.grid-layout {
+    --gap: 8.4375rem;
+    grid-template-columns: var(--gap) 1fr 1fr 1fr var(--gap);
+    grid-template-areas: ". card1 card2 card3 .";
+  }
+  .steps__3 {
+    margin-inline-start: 1rem;
   }
 }
 
@@ -594,4 +651,9 @@ body {
 
 .flow > *:not(:first-child) {
   margin-top: 10px;
+}
+@media screen and (min-width: 45em) {
+  .flow > *:not(:first-child) {
+    margin-top: 0px;
+  }
 }/*# sourceMappingURL=main.css.map */
