--- a/src/sass/utilities/_flow.scss
+++ b/src/sass/utilities/_flow.scss
@@ -1,3 +1,9 @@
+@use "../abstracts/" as *;
+
 .flow > *:not(:first-child) {
   margin-top: 10px;
+
+  @include mq(medium) {
+    margin-top: 0px;
+  }
 }
