--- a/src/sass/components/_feature.scss
+++ b/src/sass/components/_feature.scss
@@ -3,10 +3,11 @@
 .card {
   &.grid-layout {
     --gap: #{$gap-mobile};
-    // grid-template-columns: var(--gap) 1fr var(--gap);
+    grid-template-columns: var(--gap) 1fr var(--gap);
     // grid-template-rows: auto 1fr auto;
     grid-template-areas:
-      ". title ."
+      // ". title ."
+
       "pic pic pic"
       ". text .";
   }
@@ -19,18 +20,23 @@
 
     grid-column: 1 / -1;
     grid-row: 2 / 3;
+    grid-area: pic;
   }
 
   &__title {
     grid-area: title;
 
-    // grid-column: 2 / 3;
+    grid-column: 2 / 3;
   }
 
   &__paragraph {
-    grid-area: text;
+    // grid-area: text;
     font-size: fs(400);
+    font-family: $ff-base;
     line-height: 1.2;
+    font-size: 1rem;
+    text-transform: none;
+    grid-column: 2 span 1;
   }
 
   @include mq(medium) {
@@ -53,29 +59,31 @@
     }
 
     &__paragraph {
-      grid-area: text;
-      grid-row: 2 / 3;
+      // grid-area: text;
+      // grid-row: 2 / 3;
       font-size: fs(400);
       line-height: 1.2;
       grid-row: 2 / 3;
 
-      background-color: clr(neutral, 600);
+      background-color: clr(primary, 500);
       color: clr(neutral, 400);
       padding: size(36);
     }
 
     &__title {
-      height: 60%;
+      // height: 60%;
+
       grid-area: title;
       //   align-self: start;
       grid-row: 2 / 3;
       grid-column: 4 / 5;
+
+      align-self: center;
     }
   }
 
   @include mq(large) {
     &.grid-layout {
-      //   background-color: red;
       --gap: #{$gap-desktop};
       grid-template-columns: var(--gap) auto auto 1fr var(--gap);
       grid-template-areas: "pic pic title text text";
@@ -83,10 +91,6 @@
 
     &__img {
       min-width: 473px;
-      //   background-image: url(../assets/img/hombre-oficina-preocupado-tablet.jpg);
-      //   background-position: center;
-      //   background-size: cover;
-      //   aspect-ratio: 1;
 
       grid-column: 1 / 4;
       grid-row: 2 / 3;
@@ -120,10 +124,10 @@
       .card__img {
         grid-area: pic;
       }
-      .card__paragraph {
-        // grid-column: 1/ 4;
-        grid-area: text;
-      }
+      // .card__paragraph {
+      //   // grid-column: 1/ 4;
+      //   grid-area: text;
+      // }
 
       .card__title {
         grid-area: title;
