se ingresó <Form/> y sus estilos

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -117,6 +117,10 @@ input {
   padding: 0.5rem 1rem;
   font-size: 0.7rem;
   width: 100%;
+
+  @include mq(medium) {
+    font-size: clamp(fs(400), 1rem + 2vw, fs(500));
+  }
 }
 
 .textArea {
@@ -125,4 +129,8 @@ input {
   min-height: 100px;
   border: none;
   width: 100%;
+
+  @include mq(medium) {
+    font-size: clamp(fs(400), 1rem + 2vw, fs(500));
+  }
 }
