--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -13,6 +13,7 @@
     width: min-content;
     text-align: right;
     line-height: 1;
+    color: clr(neutral, 600);
   }
 
   @include mq(medium) {
@@ -81,7 +82,7 @@
     // align-self: center;
     grid-column: 2 / span 1;
 
-    color: white;
+    color: clr(primary, 400);
     padding-block: 1rem;
   }
 
@@ -90,12 +91,13 @@
     font-size: fs(600);
     line-height: 1;
     text-align: left;
+    color: inherit;
   }
 
   &__note {
     font-size: x-small;
     font-style: italic;
-    color: clr(primary, 500);
+    color: clr(neutral, 400);
     font-weight: $fw-700;
   }
 
@@ -120,6 +122,7 @@
       left: $gap-tablet;
       right: $gap-tablet;
       grid-area: text;
+      color: clr(primary, 500);
     }
 
     &__pic {
@@ -135,16 +138,15 @@
 
     &__title {
       width: 20ch;
-      color: clr(neutral, 600);
       font-weight: $fw-700;
     }
 
     &__note {
       font-size: fs(500);
+      color: inherit;
     }
 
     &__paragraph {
-      color: clr(neutral, 600);
       font-weight: $fw-700;
       width: 45ch;
       font-size: 1.5rem;
