--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -46,6 +46,7 @@ body {
   width: min-content;
   text-align: right;
   line-height: 1;
+  color: rgba(0, 0, 0, 0.8941176471);
 }
 @media screen and (min-width: 45em) {
   .header__wrapper.grid-layout {
@@ -96,7 +97,7 @@ body {
 }
 .hero__text-group {
   grid-column: 2/span 1;
-  color: white;
+  color: #b6ea00;
   padding-block: 1rem;
 }
 .hero__title {
@@ -105,11 +106,12 @@ body {
   font-size: clamp(1.5rem, 3vw + 1.5rem, 2.5rem);
   line-height: 1;
   text-align: left;
+  color: inherit;
 }
 .hero__note {
   font-size: x-small;
   font-style: italic;
-  color: #4f6308;
+  color: rgb(255, 255, 255);
   font-weight: 700;
 }
 .hero__paragraph {
@@ -128,6 +130,7 @@ body {
     left: 3.375rem;
     right: 3.375rem;
     grid-area: text;
+    color: #4f6308;
   }
   .hero__pic {
     background-image: url(../assets/img/hero-tablet.webp);
@@ -140,14 +143,13 @@ body {
   }
   .hero__title {
     width: 20ch;
-    color: rgba(0, 0, 0, 0.8941176471);
     font-weight: 700;
   }
   .hero__note {
     font-size: 1.3125rem;
+    color: inherit;
   }
   .hero__paragraph {
-    color: rgba(0, 0, 0, 0.8941176471);
     font-weight: 700;
     width: 45ch;
     font-size: 1.5rem;
@@ -355,6 +357,7 @@ body {
 .third__ul {
   grid-area: text;
   margin-inline-start: 1rem;
+  text-transform: capitalize;
 }
 .third__li {
   text-align: left;
@@ -438,7 +441,6 @@ body {
   }
   :is(.third__card-1, .third__card-2, .third__card-3) .third__label {
     font-size: 1rem;
-    text-transform: capitalize;
   }
 }
 
