--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,1 +1,19 @@
 @use "../abstracts/" as *;
+
+.footer {
+  padding: 2rem;
+  min-height: 200px;
+  background-color: clr(primary, 500);
+  color: clr(neutral, 400);
+
+  display: grid;
+  place-items: center;
+
+  &__subtitle {
+    font-size: fs(600);
+  }
+
+  code {
+    color: clr(primary, 400);
+  }
+}
